# WinTmp

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
WinTmp/: __init__.py
tests/: cpu_gpu_test.py
