[build-system]
requires = ["setuptools>=46", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "WinTmp"
authors = [
    {name = "Kethan Vegunta", email = "kethan@vegunta.com"},
]
description = "A package used to get temperature on Windows Machines."
readme = "README.md"
requires-python = ">=3.6"
keywords = ["windows", "temperature", "cpu", "gpu", "amd", "intel", "nvidia"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
version_file = "WinTmp/_version.py"
